@@ -66,9 +66,8 @@ void ckIDTest()
         ckID id5 = id2;
         ckAssert(id5.getValue() == id2.getValue());
 
-        ckAssert(ckID::genID("0123456789012345678901234567890") != ckID::genID("01234567890123456789012345678901"));
-        ckAssert(ckID::genID("01234567890123456789012345678901") == ckID::genID("012345678901234567890123456789012"));
-        ckAssert(ckID::genID("01234567890123456789012345678901") == ckID::genID("0123456789012345678901234567890123"));
+        ckAssert(ckID::genID("0123456789012345678901234567890123456789") == ckID::genID("0123456789012345678901234567890123456789"));
+        ckAssert(ckID::genID("0123456789012345678901234567890123456789") != ckID::genID("012345678901234567890123456789012345678"));
 
         ckAssertThrow(ckID::genID(NULL), ckID::ExceptionInvalidArgument);
     }
@@ -131,6 +130,7 @@ void ckIDTest()
 
         ckAssert(ckID_("0123456789012345678901234567890") == ckID::genID("0123456789012345678901234567890"));
         ckAssert(ckID_("01234567890123456789012345678901") == ckID::genID("01234567890123456789012345678901"));
-        ckAssert(ckID_("012345678901234567890123456789012") == ckID::genID("012345678901234567890123456789012"));
+
+        ckAssertThrow(ckID_("012345678901234567890123456789012"), ckID::ExceptionTooLongString);
     }
 }
